==> phonght32/PIFBot/stm32f407/components/driver/timer.c <==
#include "stm32f4xx.h"
#include "stm32f4xx_rcc.h"
#include "stm32f4xx_conf.h"
#include "stdlib.h"
#include "include/timer.h"
#define GPIO_SPEED_FREQ	GPIO_Speed_100MHz
#define GPIO_PUPD 		GPIO_PuPd_UP
#define SYSTEM_CLOCK	168000000
#define APB1_CLOCK		(SYSTEM_CLOCK/2)
#define APB2_CLOCK 		(SYSTEM_CLOCK)
#define TIMER_MAX_RELOAD	0xFFFF

pwm_handle_t pwm_init(pwm_config_t *config)
{
	/*Mapping implement */
	GPIO_TypeDef *GPIOx;
	uint16_t GPIO_Pin_x;
	uint32_t RCC_AHBxPeriph_GPIOx;
	uint8_t GPIO_PinSourcex;
	uint32_t RCC_APBxPeriph_TIMx;
	uint8_t GPIO_AF_TIMx;
	TIM_TypeDef *TIMx;

	if (config->pwm_pins_pack == PWM_PINS_PACK_1)
	{
		GPIOx                = (GPIO_TypeDef *)PWM_PARAM_MAPPING_PP1[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_GPIOx];
		GPIO_Pin_x           = (uint16_t)      PWM_PARAM_MAPPING_PP1[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_GPIO_Pin_x];
		RCC_AHBxPeriph_GPIOx = (uint32_t)      PWM_PARAM_MAPPING_PP1[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_RCC_AHBxPeriph_GPIOx];
		GPIO_PinSourcex      = (uint8_t)       PWM_PARAM_MAPPING_PP1[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_PinSourcex];
		RCC_APBxPeriph_TIMx  = (uint32_t)      PWM_PARAM_MAPPING_PP1[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_RCC_APBxPeriph_TIMx];
		GPIO_AF_TIMx         = (uint8_t)       PWM_PARAM_MAPPING_PP1[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_GPIO_AF_TIMx];
	}

	if (config->pwm_pins_pack == PWM_PINS_PACK_2)
	{
		GPIOx                = (GPIO_TypeDef *)PWM_PARAM_MAPPING_PP2[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_GPIOx];
		GPIO_Pin_x           = (uint16_t)      PWM_PARAM_MAPPING_PP2[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_GPIO_Pin_x];
		RCC_AHBxPeriph_GPIOx = (uint32_t)      PWM_PARAM_MAPPING_PP2[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_RCC_AHBxPeriph_GPIOx];
		GPIO_PinSourcex      = (uint8_t)       PWM_PARAM_MAPPING_PP2[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_PinSourcex];
		RCC_APBxPeriph_TIMx  = (uint32_t)      PWM_PARAM_MAPPING_PP2[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_RCC_APBxPeriph_TIMx];
		GPIO_AF_TIMx         = (uint8_t)       PWM_PARAM_MAPPING_PP2[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_GPIO_AF_TIMx];
	}

	if (config->pwm_pins_pack == PWM_PINS_PACK_3)
	{
		GPIOx                = (GPIO_TypeDef *)PWM_PARAM_MAPPING_PP3[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_GPIOx];
		GPIO_Pin_x           = (uint16_t)      PWM_PARAM_MAPPING_PP3[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_GPIO_Pin_x];
		RCC_AHBxPeriph_GPIOx = (uint32_t)      PWM_PARAM_MAPPING_PP3[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_RCC_AHBxPeriph_GPIOx];
		GPIO_PinSourcex      = (uint8_t)       PWM_PARAM_MAPPING_PP3[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_PinSourcex];
		RCC_APBxPeriph_TIMx  = (uint32_t)      PWM_PARAM_MAPPING_PP3[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_RCC_APBxPeriph_TIMx];
		GPIO_AF_TIMx         = (uint8_t)       PWM_PARAM_MAPPING_PP3[config->pwm_channel][config->timer][PWM_PARAM_MAPPING_GPIO_AF_TIMx];
	}

	TIMx = TIMx_MAPPING[config->timer];

	/* Enable Timer clock source */
	if ((config->timer == TIMER_NUM_1) || (config->timer == TIMER_NUM_8) || (config->timer == TIMER_NUM_9) || (config->timer == TIMER_NUM_10) || (config->timer == TIMER_NUM_11))
	{
		RCC_APB2PeriphClockCmd(RCC_APBxPeriph_TIMx, ENABLE);
	}
	else
	{
		RCC_APB1PeriphClockCmd(RCC_APBxPeriph_TIMx, ENABLE);
	}

	/* Enable GPIO clock source */
	RCC_AHB1PeriphClockCmd(RCC_AHBxPeriph_GPIOx, ENABLE);

	/*GPIO configuration */
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_x;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_Speed = GPIO_SPEED_FREQ;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PUPD ;
	GPIO_Init(GPIOx, &GPIO_InitStructure);

	/* Connect TIMx pin to AFx */
	GPIO_PinAFConfig(GPIOx, GPIO_PinSourcex, GPIO_AF_TIMx);

	uint16_t CCR_Val = (uint16_t)((config->pwm_duty) * (config->timer_period) / 100);

	/* Time base configuration */
	TIM_TimeBaseInitTypeDef  TIM_TimeBaseStructure;
	TIM_TimeBaseStructure.TIM_Period = config->timer_period;
	TIM_TimeBaseStructure.TIM_Prescaler = config->timer_prescaler;
	TIM_TimeBaseStructure.TIM_ClockDivision = 0;
	TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
	TIM_TimeBaseInit(TIMx, &TIM_TimeBaseStructure);

	/* PWM Mode configuration */
	TIM_OCInitTypeDef  TIM_OCInitStructure;
	TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM1;
	TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
	TIM_OCInitStructure.TIM_Pulse = CCR_Val;
	TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;

	switch (config->pwm_channel) {
	case PWM_CHANNEL_1: {
		TIM_OC1Init(TIMx, &TIM_OCInitStructure);
		TIM_OC1PreloadConfig(TIMx, TIM_OCPreload_Enable);
		break;
	}
	case PWM_CHANNEL_2: {
		TIM_OC2Init(TIMx, &TIM_OCInitStructure);
		TIM_OC2PreloadConfig(TIMx, TIM_OCPreload_Enable);
		break;
	}
	case PWM_CHANNEL_3: {
		TIM_OC3Init(TIMx, &TIM_OCInitStructure);
		TIM_OC3PreloadConfig(TIMx, TIM_OCPreload_Enable);
		break;
	}
	case PWM_CHANNEL_4: {
		TIM_OC4Init(TIMx, &TIM_OCInitStructure);
		TIM_OC4PreloadConfig(TIMx, TIM_OCPreload_Enable);
		break;
	}
	default:
		break;
	}

	TIM_ARRPreloadConfig(TIMx, ENABLE);

	pwm_handle_t handle = calloc(1, sizeof(pwm_param_t));
	if(!handle)
    {
        return -1;
    }

	handle->timer           = config->timer;
	handle->timer_period    = config->timer_period;
	handle->timer_prescaler = config->timer_prescaler;
	handle->pwm_channel     = config->pwm_channel;
	handle->pwm_pins_pack   = config->pwm_pins_pack;
	handle->pwm_duty        = config->pwm_duty;
	return handle;
}

int pwm_start(pwm_handle_t handle)
{
	/* TIM enable counter */
	TIM_Cmd(TIMx_MAPPING[handle->timer], ENABLE);

	return 0;
}

int pwm_set_duty(pwm_handle_t handle, uint8_t pwm_duty)
{
	assert_param(IS_TIM_ALL_PERIPH(TIMx_MAPPING[handle->timer]));
	TIMx_MAPPING[handle->timer]->CCR1 = pwm_duty * (handle->timer_period) / 100;
	TIMx_MAPPING[handle->timer]->EGR = TIM_PSCReloadMode_Immediate;

	handle->pwm_duty = pwm_duty;
	return 0;
}

int pwm_stop(pwm_handle_t handle)
{
	/* TIM disable counter */
	TIM_Cmd(TIMx_MAPPING[handle->timer], DISABLE);

	return 0;
}
