==> phonght32/PIFBot/stm32f4_hal_ros/components/driver/timer.c <==
#include "stm32f407xx.h"
#include "stm32f4xx_hal.h"
#include "stm32f4xx_hal_rcc.h"
#include "stm32f4xx_hal_tim.h"
#include "stdlib.h"
#include "include/timer.h"
#define SYSTEM_CLOCK					168000000
#define APB1_CLOCK						(SYSTEM_CLOCK/2)
#define APB2_CLOCK 						(SYSTEM_CLOCK)
#define TIMER_MAX_RELOAD				0xFFFF
#define PWM_COUNTERMODE_DEFAULT			TIM_COUNTERMODE_UP
#define PWM_TIM_CLOCK_DIV_DEFAULT 		TIM_CLOCKDIVISION_DIV1
#define TIM1_PWM_CH1_PP1_HW_INFO	{.rcc_apbenr_timen = RCC_APB2ENR_TIM1EN, 	\
								 	 .rcc_ahbenr_gpioen = RCC_AHB1ENR_GPIOAEN, 	\
								 	 .timer = TIM1, 							\
								 	 .port = GPIOA, 							\
								 	 .pin = GPIO_PIN_8, 						\
								 	 .alternate_func = GPIO_AF1_TIM1}
#define TIM1_PWM_CH1_PP2_HW_INFO	{.rcc_apbenr_timen = RCC_APB2ENR_TIM1EN, 	\
								 	 .rcc_ahbenr_gpioen = RCC_AHB1ENR_GPIOEEN, 	\
								 	 .timer = TIM1, 							\
								 	 .port = GPIOE, 							\
								 	 .pin = GPIO_PIN_9, 						\
								 	 .alternate_func = GPIO_AF1_TIM1}
#define TIM1_PWM_CH2_PP1_HW_INFO	{.rcc_apbenr_timen = RCC_APB2ENR_TIM1EN, 	\
								 	 .rcc_ahbenr_gpioen = RCC_AHB1ENR_GPIOAEN, 	\
								 	 .timer = TIM1, 							\
								 	 .port = GPIOA, 							\
								 	 .pin = GPIO_PIN_9, 						\
								 	 .alternate_func = GPIO_AF1_TIM1}

pwm_handle_t pwm_init(pwm_config_t *config)
{
	pwm_handle_t handle = calloc(1, sizeof(timer_t));
	if (handle == NULL)
	{
		return -1;
	}
	handle->hw_info = tim_pwm_get_hw_info(config->timer_num, config->timer_channel, config->timer_pins_pack);

	int err;

	do {
		__IO uint32_t tmpreg = 0x00U;
		SET_BIT(RCC->AHB1ENR, handle->hw_info.rcc_ahbenr_gpioen);
		tmpreg = READ_BIT(RCC->AHB1ENR, handle->hw_info.rcc_ahbenr_gpioen);
		UNUSED(tmpreg);
	} while (0U);

	do {
		__IO uint32_t tmpreg = 0x00U;
		if ((config->timer_num == TIMER_NUM_1) || (config->timer_num == TIMER_NUM_8) || (config->timer_num == TIMER_NUM_9) || (config->timer_num == TIMER_NUM_10) || (config->timer_num == TIMER_NUM_11)) {
			SET_BIT(RCC->APB2ENR, handle->hw_info.rcc_apbenr_timen);
			tmpreg = READ_BIT(RCC->APB2ENR, handle->hw_info.rcc_apbenr_timen);
		}
		else {
			SET_BIT(RCC->APB1ENR, handle->hw_info.rcc_apbenr_timen);
			tmpreg = READ_BIT(RCC->APB1ENR, handle->hw_info.rcc_apbenr_timen);
		}
		UNUSED(tmpreg);
	} while (0U);

	GPIO_InitTypeDef GPIO_InitStruct = {0};
	GPIO_InitStruct.Pin = handle->hw_info.pin;
	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.Alternate = handle->hw_info.alternate_func;
	HAL_GPIO_Init(handle->hw_info.port, &GPIO_InitStruct);

	handle->hal_handle.Instance 				= handle->hw_info.timer;
	handle->hal_handle.Init.Prescaler 			= 0;
	handle->hal_handle.Init.CounterMode 		= PWM_COUNTERMODE_DEFAULT;
	handle->hal_handle.Init.Period 				= 0;
	handle->hal_handle.Init.ClockDivision 		= PWM_TIM_CLOCK_DIV_DEFAULT;
	handle->hal_handle.Init.AutoReloadPreload 	= TIM_AUTORELOAD_PRELOAD_DISABLE;
	err = HAL_TIM_Base_Init(&handle->hal_handle);
	if(err != HAL_OK)
	{
		pwm_cleanup(handle);
		return -1;
	}
	err = HAL_TIM_PWM_Init(&handle->hal_handle);
	if(err != HAL_OK)
	{
		pwm_cleanup(handle);
		return -1;
	}

	TIM_ClockConfigTypeDef sClockSourceConfig = {0};
	sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
	err = HAL_TIM_ConfigClockSource(&handle->hal_handle, &sClockSourceConfig);
	if(err != HAL_OK)
	{
		pwm_cleanup(handle);
		return -1;
	}

	TIM_MasterConfigTypeDef sMasterConfig = {0};
	sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
	sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
	err = HAL_TIMEx_MasterConfigSynchronization(&handle->hal_handle, &sMasterConfig);
	if(err != HAL_OK)
	{
		pwm_cleanup(handle);
		return -1;
	}

	TIM_OC_InitTypeDef sConfigOC = {0};
	sConfigOC.OCMode = TIM_OCMODE_PWM1;
	sConfigOC.Pulse = 0;
	sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
	sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
	err = HAL_TIM_PWM_ConfigChannel(&handle->hal_handle, &sConfigOC, TIM_CHANNEL_x_MAPPING[config->timer_channel]);
	if(err != HAL_OK)
	{
		pwm_cleanup(handle);
		return -1;
	}

	handle->timer_channel 	 = config->timer_channel;
	handle->timer_num 		 = config->timer_num;
	handle->timer_pins_pack  = config->timer_pins_pack;
	handle->pwm_freq_hz 	 = config->pwm_freq_hz;
	handle->pwm_duty_percent = config->pwm_duty_percent;

	return handle;
}

int pwm_start(pwm_handle_t handle)
{
	HAL_TIM_PWM_Start(&handle->hal_handle, TIM_CHANNEL_x_MAPPING[handle->timer_channel]);

	return 0;
}

int pwm_stop(pwm_handle_t handle)
{
	HAL_TIM_PWM_Stop(&handle->hal_handle, TIM_CHANNEL_x_MAPPING[handle->timer_channel]);

	return 0;
}

int pwm_set_duty(pwm_handle_t handle, uint8_t duty_percent)
{
	uint32_t compare_value;
	compare_value = duty_percent*(handle->hal_handle.Instance->ARR) /100;
	__HAL_TIM_SET_COMPARE(&handle->hal_handle, TIM_CHANNEL_x_MAPPING[handle->timer_channel], compare_value);

	handle->pwm_duty_percent = duty_percent;
	return 0;
}
